--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,10 @@
 # cloudbuild.yaml
 
 steps:
-  # Install dependencies
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['app', 'deploy']
+- name: 'gcr.io/cloud-builders/gcloud'
+  args: ['app', 'deploy']
+  env:
+  - 'GOOGLE_APPLICATION_CREDENTIALS=/path/to/your/service-account-file.json'
 
-timeout: '1600s'
+options:
+  defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
